--- a/ShakeMe/Base.lproj/Main.storyboard
+++ b/ShakeMe/Base.lproj/Main.storyboard
@@ -16,20 +16,30 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jST-Ka-ocE">
-                                <rect key="frame" x="33" y="45" width="53" height="53"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jST-Ka-ocE">
+                                <rect key="frame" x="10" y="45" width="53" height="53"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="53" id="0jr-dD-RJV"/>
+                                    <constraint firstAttribute="height" constant="53" id="apP-OU-Hpv"/>
+                                </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" image="plus" catalog="system"/>
                             </button>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="lh7-9H-CU8">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="lh7-9H-CU8">
                                 <rect key="frame" x="0.0" y="93" width="414" height="720"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="euM-w1-otW"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="jST-Ka-ocE" firstAttribute="leading" secondItem="euM-w1-otW" secondAttribute="leading" constant="10" id="3Dg-j5-aaB"/>
+                            <constraint firstItem="lh7-9H-CU8" firstAttribute="bottom" secondItem="euM-w1-otW" secondAttribute="bottom" id="Gms-SY-dzw"/>
+                            <constraint firstItem="lh7-9H-CU8" firstAttribute="trailing" secondItem="euM-w1-otW" secondAttribute="trailing" id="V0N-mg-VtG"/>
+                            <constraint firstItem="jST-Ka-ocE" firstAttribute="top" secondItem="euM-w1-otW" secondAttribute="top" constant="1" id="qiA-yT-QHf"/>
+                            <constraint firstItem="lh7-9H-CU8" firstAttribute="leading" secondItem="euM-w1-otW" secondAttribute="leading" id="qwJ-Uu-LSO"/>
+                            <constraint firstItem="lh7-9H-CU8" firstAttribute="top" secondItem="euM-w1-otW" secondAttribute="top" constant="49" id="v0F-rz-gjY"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Settings" id="0YF-e3-e3S"/>
                 </viewController>
@@ -44,14 +54,26 @@
                     <view key="view" contentMode="scaleToFill" id="5S2-kr-1L8">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Shake Me To Get An Answer" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cU9-zb-G9O">
+                                <rect key="frame" x="55" y="433" width="304" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="mNx-Pb-719"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="cU9-zb-G9O" firstAttribute="centerY" secondItem="5S2-kr-1L8" secondAttribute="centerY" id="a6w-6J-dVF"/>
+                            <constraint firstItem="cU9-zb-G9O" firstAttribute="centerX" secondItem="5S2-kr-1L8" secondAttribute="centerX" id="bRg-h8-ikp"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Home" id="LsH-Sl-x9B"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Sut-NC-HO3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1239" y="-368"/>
+            <point key="canvasLocation" x="1237.68115942029" y="-368.30357142857139"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="Kkz-9V-4ad">
