--- a/ShakeMe/Base.lproj/Main.storyboard
+++ b/ShakeMe/Base.lproj/Main.storyboard
@@ -83,8 +83,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Shake Me To Get An Answer" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cU9-zb-G9O">
-                                <rect key="frame" x="48.5" y="201" width="317" height="30"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Shake Me To Get An Answer" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cU9-zb-G9O">
+                                <rect key="frame" x="10" y="201" width="394" height="30"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="25"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -132,8 +132,10 @@
                             <constraint firstItem="cU9-zb-G9O" firstAttribute="centerX" secondItem="5S2-kr-1L8" secondAttribute="centerX" id="bRg-h8-ikp"/>
                             <constraint firstItem="mNx-Pb-719" firstAttribute="trailing" secondItem="oTa-C4-dXA" secondAttribute="trailing" constant="40" id="dSK-vJ-mbS"/>
                             <constraint firstItem="gI8-7p-mvy" firstAttribute="centerX" secondItem="5S2-kr-1L8" secondAttribute="centerX" id="dXM-dT-ftT"/>
+                            <constraint firstItem="cU9-zb-G9O" firstAttribute="leading" secondItem="mNx-Pb-719" secondAttribute="leading" constant="10" id="gV0-Bw-p2f"/>
                             <constraint firstItem="aJq-90-4dC" firstAttribute="centerX" secondItem="5S2-kr-1L8" secondAttribute="centerX" id="gYY-LE-2Kf"/>
                             <constraint firstItem="oTa-C4-dXA" firstAttribute="top" secondItem="cU9-zb-G9O" secondAttribute="bottom" constant="50" id="hrM-Jl-Pvo"/>
+                            <constraint firstItem="mNx-Pb-719" firstAttribute="trailing" secondItem="cU9-zb-G9O" secondAttribute="trailing" constant="10" id="vYM-br-iiN"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Home" id="LsH-Sl-x9B">
