1. Added appIcon 2. Activity indicator style set to large in storyboard 3.MainViewController refactoring

--- a/ShakeMe/Base.lproj/Main.storyboard
+++ b/ShakeMe/Base.lproj/Main.storyboard
@@ -107,7 +107,7 @@
                                     <action selector="okButtonTapped:" destination="rSq-6a-WJn" eventType="touchUpInside" id="rAW-iY-e3N"/>
                                 </connections>
                             </button>
-                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="aJq-90-4dC">
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="aJq-90-4dC">
                                 <rect key="frame" x="147" y="388" width="120" height="120"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="120" id="oqp-eK-tue"/>
